--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,13 +11,16 @@
     tools:context="com.miryor.jawn.MainActivity">
 
     <Button
+        android:id="@+id/add_notification_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/button_add_notification"/>
+        android:text="@string/button_add_notification"
+        android:layout_alignParentTop="true"/>
 
     <ListView android:id="@+id/list_notifications"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/add_notification_button"
         />
 
 </RelativeLayout>
