--- a/app/src/main/res/layout/activity_add_notifier.xml
+++ b/app/src/main/res/layout/activity_add_notifier.xml
@@ -65,4 +65,13 @@
         <include layout="@layout/day_of_week" />
     </TableRow>
 
+    <TableRow>
+        <FrameLayout></FrameLayout>
+        <CheckBox android:id="@+id/notifier_enabled"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/label_enabled"
+            android:visibility="invisible"/>
+    </TableRow>
+
 </TableLayout>
