--- a/app/src/main/res/layout/activity_add_notifier.xml
+++ b/app/src/main/res/layout/activity_add_notifier.xml
@@ -15,37 +15,28 @@
     <TableRow>
         <TextView android:id="@+id/label_postalcode"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="@string/label_postalcode"
-            android:textAlignment="textEnd"
-            android:layout_gravity="end"
             android:gravity="center"
             />
 
         <EditText android:id="@+id/notifier_postalcode"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_width="match_parent" />
     </TableRow>
 
     <TableRow>
         <TextView android:id="@+id/label_time"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/label_time"
-            android:textAlignment="textEnd"
-            android:layout_gravity="end"
             android:gravity="center"
+            android:text="@string/label_time"
             />
         <TextView android:id="@+id/notifier_time"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:gravity="center"
             android:text="00:00"
             />
 
         <Button android:id="@+id/button_pick_time"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="@string/pick_time"
             android:onClick="showTimePickerDialog"
             android:layout_alignParentLeft="true"
@@ -56,10 +47,7 @@
     <TableRow>
         <TextView android:id="@+id/label_day_of_week"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="@string/label_day_of_week"
-            android:textAlignment="textEnd"
-            android:layout_gravity="end"
             android:gravity="center"
             />
         <include layout="@layout/day_of_week" />
@@ -69,9 +57,24 @@
         <FrameLayout></FrameLayout>
         <CheckBox android:id="@+id/notifier_enabled"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
             android:text="@string/label_enabled"
             android:visibility="invisible"/>
+    </TableRow>
+
+    <TableRow>
+        <FrameLayout></FrameLayout>
+        <Button android:id="@+id/button_cancel"
+            android:layout_width="wrap_content"
+            android:text="@string/button_cancel"
+            android:onClick="cancelNotifier"
+            android:layout_alignParentRight="true"
+            />
+        <Button android:id="@+id/button_save"
+            android:layout_width="wrap_content"
+            android:text="@string/button_save"
+            android:onClick="saveNotifier"
+            android:layout_alignParentLeft="true"
+            />
     </TableRow>
 
 </TableLayout>
