--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,16 @@
         app:srcCompat="@android:drawable/ic_input_add"
         android:onClick="addNotification"/>
 
+    <!--
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/sign_out_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="@string/sign_out"
+        android:theme="@style/ThemeOverlay.MyDarkButton"
+        android:onClick="checkSignin" />-->
+
 </android.support.design.widget.CoordinatorLayout>
 
 <!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
