--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.miryor.jawn.MainActivity">
 
-    <Button
+    <!-- <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/button_add_notification"/>
+        android:text="@string/button_add_notification"/> -->
 
     <ListView android:id="@+id/list_notifications"
         android:layout_width="wrap_content"
