--- a/app/src/main/res/layout/signin.xml
+++ b/app/src/main/res/layout/signin.xml
@@ -72,13 +72,15 @@
             android:textSize="14sp" />
 
         <Button
-            android:id="@+id/button_optional_action"
-            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
+            android:id="@+id/notifications_button"
+            style="@style/Widget.AppCompat.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"
-            tools:text="Optional Action"
-            tools:visibility="visible" />
+            android:visibility="visible"
+            android:text="View List"
+            tools:visibility="visible"
+            android:onClick="viewNotifications"
+            />
 
     </LinearLayout>
 
